# Cinux-Book

./: .gitignore  CMakeLists.txt  DONE.md  README.md  ROADMAP.md  package.json  pnpm-lock.yaml  project.config.ts
.github/workflows/: ci.yml  deploy.yml
boot/: CMakeLists.txt  boot_info.h  stage2.S
boot/common/: boot.S  serial.S
cmake/: qemu.cmake
document/: index.md
document/book/: index.md
document/book/01-boot/: 001-boot-real-mode.md  002-boot-gdt-protected.md  003-boot-long-mode.md  004-boot-load-mini-kernel.md
document/book/02-mini-kernel/: 005-mini-kernel-entry.md  006-mini-kernel-pmm.md  007-mini-kernel-intr.md  008-load-large-kernel.md
document/book/03-big-kernel/: 009-large-kernel-entry.md  010-big-kernel-gdt.md  010b-big-kernel-idt-exceptions.md  011-big-kernel-pic-pit.md  012-kprintf-sse.md  013-vga-framebuffer.md  013b-console-kprintf-dual-output.md  (+1 more)
document/debug-notes/: 001-real-mode-boot-pitfalls.md  002-protected-mode-switch.md  003-long-mode-entry.md  004-mini-kernel-load-handoff.md  005-mini-kernel-output-testing.md  006-pmm-linker-symbol-and-ctors.md  009-elf-header-self-corruption.md  012-sse-o2-triple-fault.md  019-proc-context-pitfalls.md  020-proc-scheduler-pitfalls.md  021-proc-sync-pitfalls.md  022-ring3-usermode-pitfalls.md  023-syscall-pitfalls.md  024-shell-pitfalls.md  028e-mmio-stack-collision.md  029-canvas-heap-directmap.md  030-gp-stack-alignment.md  index.md
document/hands-on/: 001-boot-real-mode.md  004_boot_load_mini_kernel_A.md  004_boot_load_mini_kernel_B.md  005-mini-kernel-entry.md  007-mini-kernel-interrupts.md  008-mini-kernel-disk-and-loader.md  009A-big-kernel-boot.md  009B-big-kernel-io-serial.md  009C-big-kernel-kprintf.md  009D-big-kernel-elf-bugfix.md  009E-big-kernel-stress-test.md  010-big-kernel-gdt-idt.md  011-big-kernel-pic-pit-timer.md
document/labs/: index.md
document/primer/: README.md  index.md
document/read-through/: 001-boot-real-mode.md  004_boot_load_mini_kernel_A.md  004_boot_load_mini_kernel_B.md  005-mini-kernel-entry.md  007-mini-kernel-interrupts.md  008-mini-kernel-disk-and-loader.md  009A-big-kernel-boot.md  009B-big-kernel-io-serial.md  009C-big-kernel-kprintf.md  009D-big-kernel-elf-bugfix.md  009E-big-kernel-stress-test.md  010-big-kernel-gdt-idt.md  011-big-kernel-pic-irq.md
document/reference/: filesystem-vfs-ext2.md  index.md  interrupts-idt-pic-pit.md  memory-pmm-vmm-heap.md  process-context-scheduler.md  storage-ahci-pci.md
document/tutorial/: 001-boot-real-mode.md  004_boot_load_mini_kernel_A.md  004_boot_load_mini_kernel_B.md  005-mini-kernel-entry.md  007-mini-kernel-interrupts.md  008-mini-kernel-disk-and-loader.md  009A-big-kernel-boot.md  009B-big-kernel-io-serial.md  009C-big-kernel-kprintf.md  009D-big-kernel-elf-bugfix.md  009E-big-kernel-stress-test.md  010-big-kernel-gdt-idt.md  011-big-kernel-pic-pit.md
kernel/: CMakeLists.txt  main.cpp
kernel/drivers/: canvas.cpp  canvas.hpp  pit.cpp  pit.hpp
kernel/fs/: ext2.cpp  ext2.hpp  ext2_directory.cpp  ext2_types.hpp  inode.cpp  inode.hpp  ramdisk.cpp  ramdisk.hpp  vfs_mount.cpp  vfs_mount.hpp
kernel/gui/: desktop_icon.hpp  gui_init.cpp  gui_init.hpp  terminal.cpp  terminal.hpp  window.hpp  window_manager.cpp  window_manager.hpp
kernel/ipc/: pipe.cpp
kernel/lib/: atomic.hpp  kprintf.cpp  kprintf.hpp  string.cpp
kernel/mini/: CMakeLists.txt  big_kernel_loader.cpp  big_kernel_loader.hpp  elf_loader.cpp  elf_loader.hpp  linker.ld  main.cpp
kernel/mini/arch/x86_64/: boot.S  exception_handlers.cpp  gdt.cpp  gdt.hpp  idt.cpp  idt.hpp  interrupts.S
kernel/mini/driver/: ata.cpp  ata.hpp  io.h  serial.cpp  serial.h
kernel/mini/lib/: kprintf.cpp  string.cpp  string.h
kernel/mini/lib/private/: format.cpp  format.h
kernel/mini/test/: CMakeLists.txt  kernel_test.h  main_test.cpp  test_ata.cpp  test_big_kernel_load.cpp  test_cpp_basic.cpp  test_elf_loader.cpp  test_interrupts.cpp  test_pmm.cpp  test_stress_big_kernel.cpp
kernel/mm/: address_space.cpp  address_space.hpp  heap.cpp  heap.hpp  pmm.cpp  pmm.hpp  vmm.cpp  vmm.hpp
kernel/proc/: elf_types.cpp  elf_types.hpp  execve.cpp  fork.cpp  init.cpp  per_cpu.hpp  pid.cpp  pid.hpp  process.cpp  process.hpp  process_new.cpp  scheduler.cpp  scheduler.hpp  sync.hpp  task_builder.cpp
kernel/syscall/: sys_close.cpp  sys_creat.cpp  sys_creat.hpp  sys_execve.cpp  sys_execve.hpp  sys_fork.cpp  sys_fork.hpp  sys_getdents.cpp  sys_getpid.cpp  sys_getpid.hpp  sys_getppid.cpp  sys_getppid.hpp  sys_mkdir.cpp  sys_mkdir.hpp  sys_open.cpp  sys_pipe.cpp  sys_read.cpp  sys_read.hpp  sys_rmdir.cpp  sys_rmdir.hpp  sys_stat.cpp  sys_unlink.cpp  sys_unlink.hpp  sys_waitpid.cpp  sys_waitpid.hpp  sys_write.cpp  syscall_nums.hpp
kernel/test/: big_kernel_test.h  main_test.cpp  test_address_space.cpp  test_ahci_write.cpp  test_bitmap_icon.cpp  test_desktop.cpp  test_ext2.cpp  test_ext2_allocator.cpp  test_ext2_inode_ops.cpp  test_ext2_ops.cpp  test_fork_exec.cpp  test_gdt_idt.cpp  test_heap.cpp  test_kprintf_format.cpp  test_multi_terminal.cpp  test_pic_pit.cpp  test_pipe.cpp  test_pmm.cpp  test_ramdisk.cpp  test_scheduler.cpp  test_shell.cpp  test_shell_write.cpp  test_syscall.cpp  test_syscall_ext2.cpp  test_terminal.cpp  test_terminal_shell.cpp  test_usermode.cpp  test_video.cpp
scripts/: build.ts  build_image.sh  create_ext2_disk.sh  launch_qemu_debug.sh
test/: CMakeLists.txt
test/framework/: test_framework.h
test/unit/: test_address_space.cpp  test_ahci_write.cpp  test_ata.cpp  test_big_kernel_loader.cpp  test_bitmap_icon.cpp  test_console.cpp  test_desktop.cpp  test_elf_loader.cpp  test_ext2.cpp  test_ext2_allocator.cpp  test_ext2_inode_ops.cpp  test_ext2_ops.cpp  test_font.cpp  test_fork_exec.cpp  test_framebuffer.cpp  test_gdt_idt.cpp  test_heap.cpp  test_kprintf.cpp  test_kprintf_format.cpp  test_multi_terminal.cpp  test_pic.cpp  test_pit.cpp  test_pmm.cpp  test_shell.cpp  test_shell_write.cpp  test_smoke.cpp  test_syscall.cpp  test_syscall_ext2.cpp  test_terminal.cpp  test_usermode.cpp
user/: CMakeLists.txt
user/libc/: printf.cpp  string.cpp  syscall.cpp  syscall.h
(+162 files in other folders)
